<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/DiceTableGreen"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/RelativeLayout03"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp">


        <ImageView
            android:id="@+id/PlayerScreenLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_above="@id/namePlayers"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:background="@drawable/logo_launcher" />

        <TextView
            android:id="@+id/namePlayers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/namePlayers"
            android:textSize="20dp"
            android:textAlignment="center"
            android:textColor="@color/ActivePlayer"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/player1Field"
            android:paddingBottom="10dp"/>

        <EditText
            android:id="@+id/player1Field"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/edittext_style"
            android:ems="10"
            android:hint="Player1"
            android:inputType="textPersonName|textCapSentences|textCapWords"
            android:textAlignment="center"
            android:textColor="@color/TextColor" />

        <EditText
            android:id="@+id/player2Field"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/player1Field"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/edittext_style"
            android:ems="10"
            android:hint="Player2"
            android:inputType="textPersonName|textCapSentences|textCapWords"
            android:textAlignment="center"
            android:textColor="@color/TextColor" />

        <Button
            android:id="@+id/startGameBtn"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/player2Field"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_style"
            android:text="@string/startGame"
            android:textColor="@color/TextColor" />

        <Button
            android:id="@+id/logoutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_alt"
            android:text="@string/logoutBtn"
            android:textColor="@color/TextColor" />

    </RelativeLayout>

</LinearLayout>